--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,6 +19,6 @@
   }
 
   @if(passwordIsInvalid){
-    <p class="control-error">Please enter a valid password </p>
+    <p class="control-error">Please enter a valid password (must be at least 6 characters long and must contain '?') </p>
   }
 </form>
